--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,6 @@
 {{- if not .IsHome | and .Title }}
 <header class="page-header">
   {{- partial "breadcrumbs.html" . }}
-  <h1 class="post-title">
     {{ .Title }}
     {{- if and (or (eq .Kind `term`) (eq .Kind `section`)) (.Param "ShowRssButtonInSectionTermList") }}
     <a href="index.xml" title="RSS" aria-label="RSS">
@@ -19,7 +18,6 @@
       </svg>
     </a>
     {{- end }}
-  </h1>
   {{- if .Description }}
   <div class="post-description">
     {{ .Description | markdownify }}
@@ -89,7 +87,7 @@
   <nav class="pagination">
     {{- if $paginator.HasPrev }}
     <a class="prev" href="{{ $paginator.Prev.URL | absURL }}">
-    <i class="fa-solid fa-backward"></i>&nbsp;{{ i18n "prev_page" }}&nbsp;
+      «&nbsp;{{ i18n "prev_page" }}&nbsp;
       {{- if (.Param "ShowPageNums") }}
       {{- sub $paginator.PageNumber 1 }}/{{ $paginator.TotalPages }}
       {{- end }}
@@ -100,7 +98,7 @@
       {{- i18n "next_page" }}&nbsp;
       {{- if (.Param "ShowPageNums") }}
       {{- add 1 $paginator.PageNumber }}/{{ $paginator.TotalPages }}
-      {{- end }}&nbsp;<i class="fa-solid fa-forward"></i>
+      {{- end }}&nbsp;»
     </a>
     {{- end }}
   </nav>
