fix: back to top not work and remove warnings

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="{{ site.Language }}" dir="{{ .Language.LanguageDirection | default " auto" }}">
+<html lang="{{ site.Language }}" dir="{{ .Language.LanguageDirection | default `auto` }}">
 
 <head>
     <link rel="stylesheet" href="/fontawesome/css/all.min.css" crossorigin="anonymous">
-    {{- partial "head.html" . }}
+</head>{{- partial "head.html" . }}
 </head>
 
 <body class="
 {{- if (or (ne .Kind `page` ) (eq .Layout `archives`) (eq .Layout `search`)) -}}
-{{- print " list" -}} {{- end -}} {{- if eq site.Params.defaultTheme `dark` -}} {{- print " dark" }} {{- end -}} " id="
-    top">
+{{- print `list` -}} {{- end -}} {{- if eq site.Params.defaultTheme `dark` -}} {{- print `dark` }} {{- end -}} "
+    id="top">
     {{- partialCached "header.html" . .Page -}}
     <main class="main">
         {{- block "main" . }}{{ end }}
