--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -14,8 +14,7 @@
 </header>
 
 <div id="searchbox">
-    <input id="searchInput" autofocus placeholder="{{ .Params.placeholder | default (printf " %s ↵" .Title) }}"
-        aria-label="search" type="search" autocomplete="on">
+    <input id="searchInput" autofocus placeholder=" ↵" aria-label="search" type="search" autocomplete="on">
     <ul id="searchResults" aria-label="search results"></ul>
 </div>
 
