--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -21,15 +21,12 @@
     flex-wrap: wrap;
 }
 
-.breadcrumbs a{
+/* .breadcrumbs a{
     color: var(--secondary)!important;
     font-size: 14px!important;
     display: inline;
     flex-wrap: wrap;
-}
-.breadcrumbs a:hover{
-    color: cadetblue!important;
-}
+} */
 
 .post-meta{
     color: var(--secondary);
@@ -43,17 +40,6 @@
     list-style: none;
     margin: auto 3px;
     box-shadow: 0 1px 0 var(--secondary);
-}
-
-.post-meta a:hover{
-    color: cadetblue;
-    -webkit-transform: translateY(-2px);
-    -moz-transform: translateY(-2px);
-    transform: translateY(-2px);
-}
-
-.breadcrumbs a {
-    font-size: 16px;
 }
 
 .post-content {
