--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -42,7 +42,7 @@
     vertical-align: middle;
     pointer-events: none;
     transform: translate(0, -10%);
-    border-radius: 6px;
+    border-radius: var(--radius);
     margin-inline-end: 8px;
 }
 
