--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
     <div class="post-left-article">
         <header class="post-header">
             {{ partial "breadcrumbs.html" . }}
-            <h1 class="post-title">
+            <h1 id="post-title" class="post-title">
                 {{ .Title }}
                 {{- if .Draft }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[draft]</span></sup>{{- end }}
             </h1>
