--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -4,7 +4,8 @@
 }
 
 .post-title {
-    margin: 10px;
+    padding-top: 30px;
+    padding-bottom: 10px;
     font-size: 32px;
     text-align: center !important;
 }
@@ -44,15 +45,21 @@
 .post-content h5,
 .post-content h6 {
     margin: 16px 0 16px;
+    /* padding-top: 16px;
+    padding-bottom: 16px; */
 }
 
 .post-content h1 {
     margin: 24px auto 24px;
+    /* padding-top: 24px;
+    padding-bottom: 24px; */
     font-size: 32px;
 }
 
 .post-content h2 {
     margin: 20px auto 20px;
+    /* padding-top: 20px;
+    padding-bottom: 20px; */
     font-size: 28px;
 }
 
@@ -301,7 +308,6 @@
 
 .toc ul li:has(> a.active) {
     color: var(--primary);
-    font-weight: 500;
 }
 
 .post-footer {
