--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -3,13 +3,7 @@
 {{- if $has_headers -}}
 <div class="toc">
     <div {{if (.Param "TocOpen") }} open{{ end }}>
-        <!-- <summary accesskey="c" title="(Alt + C)">
-            <span class="details">&nbsp;{{- i18n "toc" | default "Table of Contents" }}</span>
-        </summary> -->
-        <!-- <ul>
-            <li> <p class="toc-title">目录</p></li>
-        </ul> -->
-        <p class="toc-title"><i class="fa-solid fa-bookmark"></i><a href="#post-title">&nbsp; 目录</a></p>
+        <p class="toc-title"><a href="#post-title"><i class="fa-regular fa-bookmark"></i>&nbsp; 标题</a></p>
 
         <div class="inner">
             {{- if (.Param "UseHugoToc") }}
