--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -8,9 +8,9 @@
     {{- $scratch.Add "path" (printf "%s/" $element )}}
     {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
     {{- if (and ($bc_pg) (gt (len . ) 0))}}
-    <a href="{{ $bc_pg.Permalink }}"><i class="fa-solid fa-angle-right"></i>&nbsp;{{ $bc_pg.Name }}</a>
+    <a href="{{ $bc_pg.Permalink }}"><i class="fi fi-angle-right-solid">&#x27;</i>&nbsp;{{ $bc_pg.Name }}</a>
     {{- end }}
     {{- end -}}
-    &nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;{{.Title}}</span></p>
+    &nbsp;<span><i class="fi fi-angle-right-solid">&#x27;</i>&nbsp;{{.Title}}</span></p>
     </div>
 {{- end -}}
