--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -3,7 +3,7 @@
 {{- if $has_headers -}}
 <div class="toc">
     <div {{if (.Param "TocOpen") }} open{{ end }}>
-        <p class="toc-title"><a href="#post-title"><i class="fa-regular fa-bookmark"></i>&nbsp; 标题</a></p>
+        <p class="toc-title"><a href="#post-title"><i class="fi fi-bookmark-regular">&#x31;</i>&nbsp; 标题</a></p>
 
         <div class="inner">
             {{- if (.Param "UseHugoToc") }}
