--- a/layouts/partials/edit_post.html
+++ b/layouts/partials/edit_post.html
@@ -3,7 +3,7 @@
 
 {{- if or .Params.author site.Params.author (.Param "ShowReadingTime") (not .Date.IsZero) .IsTranslated }}&nbsp;&nbsp;|&nbsp;&nbsp;{{- end -}}
 <a href="{{ .Params.editPost.URL | default site.Params.editPost.URL }}{{ if .Params.editPost.appendFilePath | default ( site.Params.editPost.appendFilePath | default false ) }}/{{ $fileUrlPath }}{{ end }}" rel="noopener noreferrer" target="_blank">
-    <i class="fa-regular fa-pen-to-square"></i>&nbsp;
+    <i class="fi fi-pen-to-square-regular">&#x38;</i>&nbsp;
     {{- .Params.editPost.Text | default (site.Params.editPost.Text | default (i18n "edit_post" | default "Edit")) -}}
 </a>
 {{- end }}
