--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,7 +1,7 @@
 {{- if not .Date.IsZero -}}
 <span class="meta-item">
     <span>
-        <i class="fi fi-calendar-day-solid">&#x2f;</i>
+        <i class="fi fi-calendar"></i>
         {{ .Date | time.Format (default "January 2, 2006" site.Params.DateFormat) }}
     </span>
 </span>
@@ -10,7 +10,7 @@
 {{- if (.Param "ShowReadingTime") -}}
 <span class="meta-item">
     <span>
-        &nbsp;·&nbsp;&nbsp;<i class="fi fi-clock-solid">&#x2e;</i>&nbsp;
+        &nbsp;·&nbsp;<i class="fi fi-clock"></i>
         {{- i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime) -}}
     </span>
 </span>
@@ -19,7 +19,7 @@
 {{- if (.Param "ShowWordCount") -}}
 <span class="meta-item">
     <span>
-        &nbsp;·&nbsp;&nbsp;<i class="fi fi-chart-simple-solid">&#x2d;</i>&nbsp;
+        &nbsp;·&nbsp;<i class="fi fi-chart"></i>
         {{- i18n "words" .WordCount | default (printf "%d words" .WordCount) -}}
     </span>
 </span>
@@ -31,7 +31,7 @@
 {{- if (or (eq $author_type "[]string") (eq $author_type "[]interface {}")) }}
 <span class="meta-item">
     <span>
-        &nbsp;·&nbsp;&nbsp;<i class="fi fi-user-solid">&#x39;</i>&nbsp;
+        &nbsp;·&nbsp;<i class="fi fi-user"></i>
         {{- (delimit $author ", " ) }}
     </span>
 </span>
@@ -39,7 +39,7 @@
 
 <span class="meta-item">
     <span>
-        &nbsp;·&nbsp;&nbsp;<i class="fi fi-user-solid">&#x39;</i>&nbsp;
+        &nbsp;·&nbsp;<i class="fi fi-user"></i>
         {{- $author }}
     </span>
 </span>
