--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -2,15 +2,16 @@
 <div class="breadcrumbs">
     {{- $url := replace .Parent.Permalink (printf "%s" site.BaseURL) "" }}
     {{- $lang_url := strings.TrimPrefix (printf "%s/" .Lang) $url -}}
-    <p><a href="/">主页</a>
-    {{- $scratch := newScratch }}
-    {{- range $index, $element := split $lang_url "/" }}
-    {{- $scratch.Add "path" (printf "%s/" $element )}}
-    {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
-    {{- if (and ($bc_pg) (gt (len . ) 0))}}
-    <a href="{{ $bc_pg.Permalink }}"><i class="fi fi-angle-right-solid">&#x27;</i>&nbsp;{{ $bc_pg.Name }}</a>
-    {{- end }}
-    {{- end -}}
-    &nbsp;<span><i class="fi fi-angle-right-solid">&#x27;</i>&nbsp;{{.Title}}</span></p>
-    </div>
+    <p>
+        <span><a href="/">主页</a></span>
+        {{- $scratch := newScratch }}
+        {{- range $index, $element := split $lang_url "/" }}
+        {{- $scratch.Add "path" (printf "%s/" $element )}}
+        {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
+        {{- if (and ($bc_pg) (gt (len . ) 0))}}<span><a href="{{ $bc_pg.Permalink }}"><i class="fi fi-angle-right"></i>{{ $bc_pg.Name }}</a></span>
+        {{- end }}
+        {{- end -}}
+        <span><i class="fi fi-angle-right"></i>{{.Title}}</span>
+    </p>
+</div>
 {{- end -}}
