--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -7,10 +7,10 @@
         {{ .Content | markdownify }}
         <p class="social-info">
             <a href="https://github.com/srcio" target="_blank" rel="noopener noreferrer me">
-                <i class="fi fi-github">&#x25;</i>&nbsp;&nbsp;GitHub
+                <i class="fi fi-github"></i>&nbsp;&nbsp;GitHub
             </a>&nbsp;&nbsp;·&nbsp;&nbsp;
             <a href="mailto:me@srcio.cn" target="_blank" rel="noopener noreferrer me">
-                <i class="fi fi-envelope-solid">&#x24;</i>&nbsp;&nbsp;邮箱
+                <i class="fi fi-mail"></i>&nbsp;&nbsp;邮箱
             </a>
         </p>
     </div>
