--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -3,9 +3,14 @@
 {{- if $has_headers -}}
 <div class="toc">
     <div {{if (.Param "TocOpen") }} open{{ end }}>
-        <p class="toc-title"><a href="#post-title"><i class="fi fi-bookmark-regular">&#x31;</i>&nbsp; 标题</a></p>
-
+        <!-- <p class="toc-title"><a href="#post-title"><i class="fi fi-bookmark"></i>&nbsp; 标题</a></p> -->
         <div class="inner">
+            <ul class="toc-title">
+                <li><a href="#post-title">&nbsp;标题</a></li>
+            </ul>
+        </div>
+        <div class="inner">
+            
             {{- if (.Param "UseHugoToc") }}
             {{- .TableOfContents -}}
             {{- else }}
