--- a/static/css/fi.css
+++ b/static/css/fi.css
@@ -1,45 +1,80 @@
 @font-face {
+  font-family: 'fi';
+  src: url('../font/fi.eot?58021389');
+  src: url('../font/fi.eot?58021389#iefix') format('embedded-opentype'),
+       url('../font/fi.woff2?58021389') format('woff2'),
+       url('../font/fi.woff?58021389') format('woff'),
+       url('../font/fi.ttf?58021389') format('truetype'),
+       url('../font/fi.svg?58021389#fi') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
     font-family: 'fi';
-    src: url('/font/fi.eot?45862958');
-    src: url('/font/fi.eot?45862958#iefix') format('embedded-opentype'),
-        url('/font/fi.woff?45862958') format('woff'),
-        url('/font/fi.ttf?45862958') format('truetype'),
-        url('/font/fi.svg?45862958#fi') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    src: url('../font/fi.svg?58021389#fi') format('svg');
+  }
+}
+*/
+[class^="fi-"]:before, [class*=" fi-"]:before {
+  font-family: "fi";
+  font-style: normal;
+  font-weight: normal;
+  speak: never;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.fi {
-    font-family: "fi";
-    font-style: normal;
-    font-weight: normal;
-    speak: never;
-
-    /* display: inline-block; */
-    /* text-decoration: inherit; */
-    /* width: 1em; */
-    /* margin-right: .2em; */
-    /* text-align: center; */
-    /* opacity: .8; */
-
-    /* For safety - reset parent styles, that can break glyph codes*/
-    /* font-variant: normal; */
-    /* text-transform: none; */
-
-    /* fix buttons height, for twitter bootstrap */
-    line-height: 1em;
-
-    /* Animation center compensation - margins should be symmetric */
-    /* remove if not needed */
-    /* margin-left: .2em; */
-
-    /* You can be more comfortable with increased icons size */
-    /* font-size: 120%; */
-
-    /* Font smoothing. That was taken from TWBS */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    /* Uncomment for 3D effect */
-    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
+.fi-angle-right:before { content: '\e800'; } /* '' */
+.fi-backward:before { content: '\e801'; } /* '' */
+.fi-book:before { content: '\e802'; } /* '' */
+.fi-bookmark:before { content: '\e803'; } /* '' */
+.fi-books:before { content: '\e804'; } /* '' */
+.fi-calendar:before { content: '\e805'; } /* '' */
+.fi-chart:before { content: '\e806'; } /* '' */
+.fi-check:before { content: '\e807'; } /* '' */
+.fi-clock:before { content: '\e808'; } /* '' */
+.fi-copy:before { content: '\e809'; } /* '' */
+.fi-copyright:before { content: '\e80a'; } /* '' */
+.fi-edit:before { content: '\e80b'; } /* '' */
+.fi-fire:before { content: '\e80c'; } /* '' */
+.fi-folder:before { content: '\e80d'; } /* '' */
+.fi-forward:before { content: '\e80e'; } /* '' */
+.fi-github:before { content: '\e80f'; } /* '' */
+.fi-home:before { content: '\e810'; } /* '' */
+.fi-mail:before { content: '\e811'; } /* '' */
+.fi-reader:before { content: '\e812'; } /* '' */
+.fi-search:before { content: '\e813'; } /* '' */
+.fi-shield:before { content: '\e814'; } /* '' */
+.fi-tag:before { content: '\e815'; } /* '' */
+.fi-tags:before { content: '\e816'; } /* '' */
+.fi-user:before { content: '\e817'; } /* '' */
