--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -138,6 +138,13 @@
                 </a>
             </li>
             {{- end }}
+            <li>
+                <a href="/search" title="Alt + /" accesskey="/">
+                    <span>
+                        <i class="fi fi-search"></i>
+                    </span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
