--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,7 +17,7 @@
             <div class="post-meta">
                 {{- partial "post_meta.html" . -}}
                 <span class="meta-item">
-                    &nbsp;·&nbsp;<i class="fi fi-reader"></i>&nbsp;<span
+                    &nbsp;·&nbsp;<i class="fi fi-eye"></i>&nbsp;<span
                         id="busuanzi_value_page_pv"></span>
                 </span>
                 {{- partial "translation_list.html" . -}}
