--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -1,6 +1,6 @@
 .page-header,
 .post-header {
-    margin: 0px auto var(--content-gap) auto;
+    padding: 12px 0;
 }
 
 .post-title {
@@ -40,26 +40,32 @@
     margin-top: 24px;
 }
 
+.post-content h1,
+.post-content h2,
+.post-content h3,
+.post-content h4,
+.post-content h5,
+.post-content h6 {
+    clear: both;
+    padding-top: 70px;
+    margin-top: -70px !important;
+}
+
+
 .post-content h3,
 .post-content h4,
 .post-content h5,
 .post-content h6 {
     margin: 16px 0 16px;
-    /* padding-top: 16px;
-    padding-bottom: 16px; */
 }
 
 .post-content h1 {
     margin: 24px auto 24px;
-    /* padding-top: 24px;
-    padding-bottom: 24px; */
     font-size: 32px;
 }
 
 .post-content h2 {
     margin: 20px auto 20px;
-    /* padding-top: 20px;
-    padding-bottom: 20px; */
     font-size: 28px;
 }
 
@@ -273,11 +279,12 @@
     font-weight: normal;
 }
 
+
 .toc {
     font-size: 14px;
-    margin-top: 140px;
+    margin-top: 160px;
     position: sticky;
-    top: 20px;
+    top: 70px;
 }
 
 .toc .inner {
@@ -320,7 +327,7 @@
 }
 
 .post-footer {
-    margin-top: 56px;
+    margin-top: calc(var(--gap) * 2);
 }
 
 .post-tags {
