--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,6 @@
     if (localStorage.getItem("pref-theme") === "dark") {
         document.body.classList.add('dark');
     }
-
 </script>
 {{- /* theme is dark */}}
 {{- else if (eq site.Params.defaultTheme "dark") }}
@@ -14,7 +13,6 @@
     if (localStorage.getItem("pref-theme") === "light") {
         document.body.classList.remove('dark')
     }
-
 </script>
 {{- else }}
 {{- /* theme is auto */}}
@@ -144,6 +142,20 @@
                         <i class="fi fi-search"></i>
                     </span>
                 </a>
+            </li>
+            <li>
+                <span>|</span>
+            </li>
+            <li>
+                <span>
+                    <a href="https://github.com/srcio" target="_blank" rel="noopener noreferrer me">
+                        <i class="fi fi-github"></i>
+                    </a>
+                    <span>·</span>
+                    <a href="mailto:me@srcio.cn" target="_blank" rel="noopener noreferrer me">
+                        <i class="fi fi-mail"></i>
+                    </a>
+                </span>
             </li>
         </ul>
     </nav>
