--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -3,10 +3,9 @@
 {{- if $has_headers -}}
 <div class="toc">
     <div {{if (.Param "TocOpen") }} open{{ end }}>
-        <!-- <p class="toc-title"><a href="#post-title"><i class="fi fi-bookmark"></i>&nbsp; 标题</a></p> -->
         <div class="inner">
             <ul class="toc-title">
-                <li><a href="#post-title">&nbsp;标题</a></li>
+                <li><a href="#top">&nbsp;标题</a></li>
             </ul>
         </div>
         <div class="inner">
