--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -1,30 +1,29 @@
-/* .header {
+.header {
     position: sticky;
     top: 0;
     z-index: 100;
     background: var(--header-bg);
+    transition: transform 0.3s ease;
     -webkit-backdrop-filter: saturate(180%) blur(16px);
     backdrop-filter: saturate(180%) blur(16px);
-} */
+    box-shadow: 0 1px 0px var(--code-bg);
+}
 
 .nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: calc(var(--nav-width) + var(--gap)*2);
+    max-width: calc(var(--nav-width) + var(--gap) * 18);
     margin-inline-start: auto;
     margin-inline-end: auto;
     line-height: var(--header-height);
-}
-
-.nav a {
-    display: block;
+    padding-left: 300px;
+    padding-right: 300px;
 }
 
 .logo,
 #menu {
     display: flex;
-    margin: auto var(--gap);
 }
 
 .logo {
@@ -32,8 +31,8 @@
 }
 
 .logo a {
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 24px;
+    font-weight: 700;
 }
 
 .logo a img,
@@ -70,10 +69,11 @@ body:not(.dark) #sun {
     word-break: keep-all;
     overflow-x: auto;
     white-space: nowrap;
+    color: var(--secondary);
 }
 
 #menu li+li {
-    margin-inline-start: 16px;
+    margin-inline-start: var(--gap);
 }
 
 #menu a {
