--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -108,4 +108,11 @@ textarea:-webkit-autofill {
 img {
     display: block;
     max-width: 100%;
+    background-color: var(--theme);
+}
+
+img:active{
+    position: relative;
+    transform: scale(1.2);
+    z-index: 999;
 }
