--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -59,8 +59,7 @@
 {{- end }}
 
 <article class="{{ $class }}">
-  {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
-  {{- partial "cover.html" (dict "cxt" . "IsHome" true "isHidden" $isHidden) }}
+  <div class="post-info">
   <header class="entry-header">
     <h2>
       {{- .Title }}
@@ -77,6 +76,9 @@
     {{- partial "post_meta.html" . -}}
   </footer>
   {{- end }}
+  </div>
+  {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
+  {{- partial "post-list-cover.html" (dict "cxt" . "IsHome" true "isHidden" $isHidden) }}
   <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
 </article>
 {{- end }}
