--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -3,8 +3,9 @@
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
     max-width: calc(var(--nav-width) + var(--gap) * 18);
     margin: auto;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding: 12px 300px ;
+    /* padding-left: 300px;
+    padding-right: 300px; */
 }
 
 .page-header .post-title {
