--- a/assets/css/common/archive.css
+++ b/assets/css/common/archive.css
@@ -1,6 +1,7 @@
 .archive-posts {
     width: 100%;
     font-size: 16px;
+    margin: auto;
 }
 
 .archive-year {
@@ -34,14 +35,21 @@
 }
 
 .archive-entry:hover {
-    -webkit-transform: translateY(-6px);
-    -moz-transform: translateY(-6px);
-    transform: translateY(-6px);
+    color: var(--link-color);
+    border-radius: var(--radius);
+    background-color:var(--active-bg);
+}
+
+.archive-entry:hover .archive-entry-title{
+    font-weight: 500;
 }
 
 .archive-entry-title {
     margin: 5px 0;
     font-weight: 400;
+}
+.archive-entry-title span{
+    margin-right: 16px;
 }
 
 .archive-count,
