--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -45,7 +45,7 @@
 .post-entry {
     position: relative;
     margin-bottom: var(--gap);
-    padding: 12px;
+    padding: 10px;
     background: var(--code-bg);
     border-radius: var(--radius);
     transition: transform 0.1s;
@@ -53,10 +53,6 @@
 
 .post-entry:active {
     transform: scale(0.96);
-}
-
-.tag-entry .entry-cover {
-    display: none;
 }
 
 .entry-header h2 {
@@ -104,7 +100,9 @@
     pointer-events: none;
     width: auto;
     height: auto;
-    max-height: 100px;
+    max-height: 120px;
+    min-width: 100%;
+    min-height: 100%;
     clear: both;
     display: block;
     margin: auto;
@@ -124,7 +122,7 @@
 .entry-cover {
     overflow: hidden;
     height: 100%;
-    width: 30%;
+    width: 40%;
     margin-bottom: unset;
 }
 
