--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -4,7 +4,8 @@
 }
 
 .post-title {
-    padding-top: 30px;
+    padding-top: 80px;
+    margin-top: -50px;
     padding-bottom: 10px;
     font-size: 32px;
     text-align: center !important;
@@ -86,15 +87,15 @@
 }
 
 .post-content a {
-    color: var(--link);
+    color: var(--link-color);
 }
 
 .post-content a:hover {
-    color: var(--link) !important;
+    color: var(--link-color) !important;
 }
 
 .post-content a code:hover {
-    color: var(--link) !important;
+    color: var(--link-color) !important;
 }
 
 .post-content del {
@@ -282,18 +283,28 @@
 
 .toc {
     font-size: 14px;
-    margin-top: 160px;
+    margin-top: 150px;
     position: sticky;
     top: 70px;
 }
 
 .toc .inner {
-    margin: 0 20px;
+    margin: 0 8px;
     padding: 5px 10px;
 }
 
+.toc li a {
+    display: block;
+    padding: 2px 6px;
+    word-break: keep-all;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .toc .inner ul * {
-    color: var(--secondary)
+    color: var(--secondary);
+    list-style-type: none;
 }
 
 .toc li ul {
@@ -302,28 +313,19 @@
     list-style: none;
 }
 
-.toc-title {
-    color: var(--secondary);
-    font-size: 16px;
-    list-style: none;
-}
-
-.toc-title li:before {
-    content: "\e803";
-    text-align: center;
-    font-family: "fi";
-    display: inline-block;
-    margin-left: -1.3em;
-    width: 1.3em;
-}
-
 .toc ul li a.active {
-    color: var(--primary);
+    background-color: var(--active-bg);
+    color: var(--link-color);
+    border-radius: 4px;
     font-weight: 500;
 }
 
-.toc ul li:has(> a.active) {
-    color: var(--primary);
+.toc ul li:has(> a.active) i{
+    color: var(--link-color);
+}
+
+.toc li:hover{
+    color: var(--link-color);
 }
 
 .post-footer {
@@ -359,7 +361,7 @@
 
 .post-tags a:hover,
 .paginav a:hover {
-    background: var(--border);
+    background: var(--active-bg);
 }
 
 .share-buttons {
@@ -385,7 +387,7 @@ h4:hover .anchor,
 h5:hover .anchor,
 h6:hover .anchor {
     display: inline-flex;
-    color: var(--secondary);
+    color: var(--link-color);
     margin-inline-start: 8px;
     font-weight: 500;
     user-select: none;
