--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,28 +1,22 @@
-{{- $headers := findRE "<h[1-6].*?>(.|\n])+?</h[1-6]>" .Content -}}
+{{- $headers := findRE "<h[1-4].*?>(.|\n])+?</h[1-4]>" .Content -}}
 {{- $has_headers := ge (len $headers) 1 -}}
 {{- if $has_headers -}}
 <div class="toc">
     <div {{if (.Param "TocOpen") }} open{{ end }}>
         <div class="inner">
-            <ul class="toc-title">
-                <li><a href="#top">&nbsp;标题</a></li>
-            </ul>
-        </div>
-        <div class="inner">
-            
             {{- if (.Param "UseHugoToc") }}
             {{- .TableOfContents -}}
             {{- else }}
-            {{- $largest := 6 -}}
+            {{- $largest := 4 -}}
             {{- range $headers -}}
-            {{- $headerLevel := index (findRE "[1-6]" . 1) 0 -}}
+            {{- $headerLevel := index (findRE "[1-4]" . 1) 0 -}}
             {{- $headerLevel := len (seq $headerLevel) -}}
             {{- if lt $headerLevel $largest -}}
             {{- $largest = $headerLevel -}}
             {{- end -}}
             {{- end -}}
 
-            {{- $firstHeaderLevel := len (seq (index (findRE "[1-6]" (index $headers 0) 1) 0)) -}}
+            {{- $firstHeaderLevel := len (seq (index (findRE "[1-4]" (index $headers 0) 1) 0)) -}}
 
             {{- $.Scratch.Set "bareul" slice -}}
             <ul>
@@ -31,7 +25,7 @@
                     {{- $.Scratch.Add "bareul" (sub (add $largest .) 1) -}}
                     {{- end -}}
                     {{- range $i, $header := $headers -}}
-                    {{- $headerLevel := index (findRE "[1-6]" . 1) 0 -}}
+                    {{- $headerLevel := index (findRE "[1-4]" . 1) 0 -}}
                     {{- $headerLevel := len (seq $headerLevel) -}}
 
                     {{/* get id="xyz" */}}
@@ -39,10 +33,10 @@
 
                     {{- /* strip id="" to leave xyz, no way to get regex capturing groups in hugo */ -}}
                     {{- $cleanedID := replace (replace $id "id=\"" "") "\"" "" }}
-                    {{- $header := replaceRE "<h[1-6].*?>((.|\n])+?)</h[1-6]>" "$1" $header -}}
+                    {{- $header := replaceRE "<h[1-4].*?>((.|\n])+?)</h[1-4]>" "$1" $header -}}
 
                     {{- if ne $i 0 -}}
-                    {{- $prevHeaderLevel := index (findRE "[1-6]" (index $headers (sub $i 1)) 1) 0 -}}
+                    {{- $prevHeaderLevel := index (findRE "[1-4]" (index $headers (sub $i 1)) 1) 0 -}}
                     {{- $prevHeaderLevel := len (seq $prevHeaderLevel) -}}
                     {{- if gt $headerLevel $prevHeaderLevel -}}
                     {{- range seq $prevHeaderLevel (sub $headerLevel 1) -}}
@@ -79,9 +73,9 @@
                     <a href="#{{- $cleanedID -}}" aria-label="{{- $header | plainify -}}">{{- $header | safeHTML -}}</a>
                     {{- end -}}
                     {{- end -}}
-                    <!-- {{- $firstHeaderLevel := len (seq (index (findRE "[1-6]" (index $headers 0) 1) 0)) -}} -->
+                    <!-- {{- $firstHeaderLevel := len (seq (index (findRE "[1-4]" (index $headers 0) 1) 0)) -}} -->
                     {{- $firstHeaderLevel := $largest }}
-                    {{- $lastHeaderLevel := len (seq (index (findRE "[1-6]" (index $headers (sub (len $headers) 1)) 1) 0)) }}
+                    {{- $lastHeaderLevel := len (seq (index (findRE "[1-4]" (index $headers (sub (len $headers) 1)) 1) 0)) }}
                 </li>
                 {{- range seq (sub $lastHeaderLevel $firstHeaderLevel) -}}
                 {{- if in ($.Scratch.Get "bareul") (add . $firstHeaderLevel) }}
@@ -102,7 +96,7 @@
     let elements;
     window.addEventListener('DOMContentLoaded', function (event) {
 
-        elements = document.querySelectorAll('h1[id],h2[id],h3[id],h4[id],h5[id],h6[id]');
+        elements = document.querySelectorAll('h1[id],h2[id],h3[id],h4[id]');
         // console.log(elements)
          
          activeElement = elements[0];
